<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ACAnalysisActivity">

    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="0px"
        android:layout_height="0px" />

    <TextView
        android:id="@+id/ac_analysis_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/ac_analysis_title"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ac_analysis_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/ac_analysis_description"
        app:layout_constraintBottom_toTopOf="@+id/node_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ac_analysis_title"
        app:srcCompat="@android:color/black" />

    <Button
        android:id="@+id/run_analysis_button"
        style="?metaButtonBarButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:text="@string/run_analysis_button"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/steps_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/steps_label"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/steps_input"
        app:layout_constraintEnd_toStartOf="@+id/steps_input"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/steps_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/steps_hint"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/run_analysis_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/steps_label" />

    <EditText
        android:id="@+id/end_frequency_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/end_frequency_hint"
        android:inputType="number"
        android:importantForAutofill="no"
        app:layout_constraintBottom_toTopOf="@+id/steps_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/steps_input" />

    <TextView
        android:id="@+id/end_frequency_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/end_frequency_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/end_frequency_input"
        app:layout_constraintEnd_toStartOf="@+id/end_frequency_input"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/start_frequency_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/start_frequency_hint"
        android:inputType="number"
        android:importantForAutofill="no"
        app:layout_constraintBottom_toTopOf="@+id/end_frequency_input"
        app:layout_constraintEnd_toEndOf="@+id/end_frequency_input"
        app:layout_constraintStart_toStartOf="@+id/end_frequency_input" />

    <TextView
        android:id="@+id/start_frequency_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/start_frequency_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/start_frequency_input"
        app:layout_constraintEnd_toStartOf="@+id/start_frequency_input"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/node_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/node_hint"
        android:inputType="number"
        android:importantForAutofill="no"
        app:layout_constraintBottom_toTopOf="@+id/start_frequency_input"
        app:layout_constraintEnd_toEndOf="@+id/start_frequency_input"
        app:layout_constraintStart_toStartOf="@+id/start_frequency_input" />

    <TextView
        android:id="@+id/node_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/node_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/node_input"
        app:layout_constraintEnd_toStartOf="@+id/node_input"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>