<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".ResultViewActivity">

    <ImageView
        android:id="@+id/result_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/result_image_view_description"
        app:layout_constraintBottom_toTopOf="@+id/element_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:color/black" />

    <LinearLayout
        android:id="@+id/element_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/change_element_type_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result_view">


        <LinearLayout
            android:id="@+id/element_type"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="0dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/change_element_type_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/result_view">

            <TextView
                android:id="@+id/element_type_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:text="@string/element_type_label"
                android:textColor="@color/colorPrimary"
                tools:layout_editor_absoluteX="139dp"
                tools:layout_editor_absoluteY="453dp" />

            <TextView
                android:id="@+id/element_type_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorAccent"
                tools:layout_editor_absoluteX="139dp"
                tools:layout_editor_absoluteY="453dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/element_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="0dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/change_element_type_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/result_view">

            <TextView
                android:id="@+id/element_value_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:text="@string/element_value_label"
                android:textColor="@color/colorPrimary"
                tools:layout_editor_absoluteX="139dp"
                tools:layout_editor_absoluteY="453dp" />

            <TextView
                android:id="@+id/element_value_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorAccent"
                tools:layout_editor_absoluteX="139dp"
                tools:layout_editor_absoluteY="453dp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/change_element_type_button"
        style="?metaButtonBarButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:text="@string/change_element_type_button"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/change_element_value_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/change_element_value_button"
        style="?metaButtonBarButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:text="@string/change_element_value_button"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/analysis_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/analysis_button"
        style="?metaButtonBarButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:text="@string/analysis_button"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/export_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/export_button"
        style="?metaButtonBarButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:text="@string/export_button"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/analysis_button" />

</androidx.constraintlayout.widget.ConstraintLayout>